# gchemol-python

./: Cargo.toml  makefile  pyproject.toml  setup.py
gchemol/: __init__.py  element.py
src/: lib.rs
tests/: test_element.py
