# cargo

# [[file:~/Workspace/Programming/gchemol-rs/python/pygchemol.note::*cargo][cargo:1]]
[package]
name = "pygchemol"
version = "0.0.1"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
rayon = "1"
octree = { path = "../octree" }
vecfx = { git = "https://github.com/gchemol/vecfx.git" }

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[lib]
name = "pygchemol"
crate-type = ["cdylib"]
# cargo:1 ends here
