# [[file:pygchemol.note::e405e081][e405e081]]
[package]
name = "pygchemol"
version = "0.0.2"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
rayon = "1"
octree = { path = "../octree" }
vecfx = { version="0.1", features = ["nalgebra"] }
gchemol = { version = "0.0.42", features=["adhoc"] }

[dependencies.pyo3]
version = "0.17.3"
# features = ["extension-module", "hashbrown", "num-bigint", "num-complex", "indexmap"]
features = ["extension-module", "anyhow"]

[lib]
name = "gchemol"
crate-type = ["cdylib"]
# e405e081 ends here
